# prymer

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  prymer.yml  pyproject.toml
.github/workflows/: publish.yml  publish_prymer.yml  tests.yml  wheels.yml
docs/: index.md  installation-and-developers-documentation.md  installation.md  overview.md
docs/scripts/: gen_ref_pages.py
prymer/: __init__.py  model.py  thermo.py  variant.py
prymer/api/: __init__.py  clustering.py  coordmath.py  melting.py  minoptmax.py  oligo.py  oligo_like.py  picking.py  primer.py  primer_like.py  primer_pair.py  probe.py  span.py  variant_lookup.py
prymer/ntthal/: __init__.py
prymer/offtarget/: __init__.py  bwa.py  offtarget_detector.py
prymer/primer3/: __init__.py  primer3.py  primer3_failure_reason.py  primer3_input.py  primer3_input_tag.py  primer3_parameters.py  primer3_task.py  primer3_weights.py
prymer/util/: __init__.py  executable_runner.py
tests/: conftest.py  test_thermo.py  test_variant.py
tests/api/: conftest.py  test_clustering.py  test_coordmath.py  test_melting.py  test_minoptmax.py  test_oligo.py  test_oligo_like.py  test_picking.py  test_primer.py  test_primer_like.py  test_primer_pair.py  test_span.py  test_variant_lookup.py
tests/api/data/: mini_chr1.vcf.gz.tbi  mini_chr3.vcf.gz.tbi  miniref.variants.vcf.gz.tbi  picking.dict  picking.fa  picking.fa.amb  picking.fa.ann  picking.fa.bwt  picking.fa.fai  picking.fa.pac  picking.fa.sa
tests/model/: test_minoptmax.py  test_oligo.py  test_primer_pair.py  test_span.py
tests/ntthal/: test_ntthal.py
tests/offtarget/: conftest.py  test_bwa.py  test_offtarget.py
tests/offtarget/data/: miniref.dict  miniref.fa  miniref.fa.ann  miniref.fa.bwt  miniref.fa.fai  miniref.fa.pac  miniref.fa.sa
tests/primer3/: test_primer3.py  test_primer3_failure_reason.py  test_primer3_input.py  test_primer3_input_tag.py  test_primer3_parameters.py  test_primer3_task.py  test_primer3_weights.py
tests/primer3/data/: miniref.dict  miniref.fa  miniref.fa.fai  miniref.variants.vcf.gz.tbi
tests/util/: test_executable_runner.py
